--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "dev": "vite",
     "build": "vite build",
     "electron": "electron .",
-    "electron-dev": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && electron .\"",
-    "dist": "npm run build && electron-builder"
+    "electron-dev": "concurrently \"npm run dev\" \"wait-on http://localhost:3000 && cross-env NODE_ENV=development electron .\"",
+    "dist": "npm run build && electron-builder",
+    "postinstall": "electron-builder install-app-deps && npm rebuild better-sqlite3 --build-from-source",
+    "rebuild-sqlite": "electron-rebuild -f -w better-sqlite3"
   },
   "build": {
     "appId": "com.yourcompany.invoiceapp",
@@ -22,14 +24,26 @@
     ]
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
+    "autoprefixer": "^10.4.21",
+    "better-sqlite3": "^12.2.0",
+    "electron": "^37.2.0",
+    "lucide-react": "^0.525.0",
+    "nanoid": "^5.1.5",
     "papaparse": "^5.5.3",
+    "postcss": "^8.5.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "@vitejs/plugin-react": "^4.6.0",
     "concurrently": "^9.2.0",
+    "cross-env": "^7.0.3",
     "electron-builder": "^26.0.12",
+    "electron-rebuild": "^3.2.9",
+    "tailwindcss": "^3.4.17",
     "vite": "^7.0.3",
     "wait-on": "^8.0.3"
   }
