--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "autoprefixer": "^10.4.21",
     "better-sqlite3": "^12.2.0",
     "electron": "^37.2.0",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.525.0",
     "nanoid": "^5.1.5",
     "papaparse": "^5.5.3",
     "postcss": "^8.5.6",
+    "qrcode": "^1.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "xlsx": "^0.18.5"
@@ -43,6 +45,7 @@
     "cross-env": "^7.0.3",
     "electron-builder": "^26.0.12",
     "electron-rebuild": "^3.2.9",
+    "jspdf": "^3.0.1",
     "tailwindcss": "^3.4.17",
     "vite": "^7.0.3",
     "wait-on": "^8.0.3"
